Add multi-domain hexamer scoring and reproducibility scripts
- Add hexamer tables for 8 taxonomic domains (gtdb, fungi, plant,
  protozoa, invertebrate, viral, mammal, vertebrate_other)
- Add --domain meta option for weighted ensemble scoring across all domains
- Remove unreliable per-read domain classification output
- Remove unused probabilistic_classifier code
- Merge validate_sequences functionality into validate.cpp
- Add benchmark and validation scripts (scripts/run_benchmarks.sh,
  scripts/run_validations.sh)
- Add hexamer extraction scripts (extract_gtdb_hexamers_parallel.cpp,
  extract_refseq_hexamers.cpp)
- Add RefSeq download scripts (download_refseq.sh, download_refseq_cds.sh)
- Add damage model training scripts (train_damage_nn.py, create_damage_lookup.py)

Validated: 59.3% frame accuracy, 56.8% sequence identity, AUC 0.6576

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ __pycache__/
 .idea/
 *.swp
 *.swo
+.groupedtimelineinclude
 
 # Output files
 *.gff
@@ -27,3 +28,6 @@ __pycache__/
 # Large model files (keep in models/ but ignore if regenerated)
 # models/*.pt
 # models/*.npz
+
+# Intermediate hexamer extraction files
+include/agp/*_hexamers.json
