Add D_max metric and comprehensive JSON summary output
- Add D_max (average of 5'/3' terminal damage) to SampleDamageProfile
- Add --summary option for JSON output with damage statistics
- Implement iterative damage detection mode (--iterative-damage)
- Add per-read damage scoring and ancient probability calculation
- Include distribution histograms in JSON output
- Track DNA/AA correction statistics
- Detect library type (single/double-stranded)
- Add lambda (decay rate) estimation from damage patterns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,5 +126,12 @@ if(OpenMP_CXX_FOUND)
     target_link_libraries(extract-hexamers OpenMP::OpenMP_CXX)
 endif()
 
+# Position-specific hexamer extraction tool
+add_executable(extract-positional-hexamers scripts/extract_positional_hexamers.cpp)
+target_link_libraries(extract-positional-hexamers ${ZLIB_LIBRARIES})
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(extract-positional-hexamers OpenMP::OpenMP_CXX)
+endif()
+
 # Install
-install(TARGETS agp agp-validate extract-hexamers DESTINATION bin)
+install(TARGETS agp agp-validate extract-hexamers extract-positional-hexamers DESTINATION bin)
