Add EM-based multi-mapping resolution to damage-annotate
Implements SQUAREM-accelerated EM algorithm for resolving ambiguous
protein-to-reference alignments. Multi-mappers get fractional weights
based on bit score and reference abundance.

New files:
- em_reassign.hpp/cpp: SQUAREM algorithm, parallel E/M steps
- reference_stats.hpp/cpp: per-reference coverage statistics
- mmap_array.hpp: memory-mapped arrays for large datasets

New CLI flags:
- --em: enable EM multi-mapping resolution
- --em-iters, --em-lambda, --em-tol: EM parameters
- --gene-summary: per-gene statistics output

Performance: 919K alignments in 4m23s, converges in 3 iterations.
Fix: StringTable now uses std::string keys to avoid dangling pointers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,8 @@ set(AGP_CORE_SOURCES
     src/adaptive_damage.cpp
     src/damage_index_writer.cpp
     src/damage_index_reader.cpp
+    src/reference_stats.cpp
+    src/em_reassign.cpp
 )
 
 # Subcommand sources
