Update .gitignore and add legitimate untracked docs/test files
.gitignore additions:
- wiki/ (GitHub wiki, separate repo)
- docs/figures/run_*/ (OpenCode planning session artifacts)
- docs/*.pdf (derivable PDF exports)
- docs/*_fixed*.png, docs/pi0_fix_*.png (dev iteration figures)
- examples/tutorial/output/ (generated at runtime)

Added to repo:
- docs/benchmark_comparison.png (referenced in README)
- docs/agp_overview.{excalidraw,svg,png}, pipeline_overview.svg,
  two_pass_architecture.svg, channel_decision.{svg,png}
- docs/*.mmd (Mermaid source files)
- examples/tutorial/data/benchmark_summary.tsv
- tests/test_benchmark_fixture.cpp

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,21 @@ notebooks/data/*.tsv.gz
 .scripts/
 *.test
 test_*[!.cpp]
+
+# GitHub wiki (managed as separate git repo)
+wiki/
+
+# OpenCode/AI planning session artifacts
+docs/figures/run_*/
+docs/figures/agp_paperbanana_input.txt
+
+# PDF exports (derivable from source diagrams)
+docs/*.pdf
+
+# Development iteration figures (not for publication)
+docs/*_fixed*.png
+docs/pi0_fix_*.png
+docs/protein_damage_fixed.png
+
+# Tutorial output (generated at runtime)
+examples/tutorial/output/
