--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,7 @@ dependencies:
   # Required libraries
   - zlib
   - libgomp  # OpenMP runtime
-  - zstd     # Columnar compression (optional but recommended)
+  - zstd     # Columnar compression (required)
 
   # Recommended workflow tools
   - pigz      # Fast parallel gzip (used for .gz input)
