Add coverage-aware EM for abundance estimation (opt-in)
New --coverage-em flag (default off) adds an outer EM loop that
down-weights proteins with non-uniform read coverage. Proteins where
reads pile up in one region are penalised relative to those with
uniform coverage, reducing multi-mapping false-positive abundance.

Coverage statistics (coverage_deviance, completeness_fhat,
coverage_weight, abundance_adjusted) are added to the protein TSV
output when --coverage-em is active.

Also: log-weights in streaming E-step, warm-start SQUAREM from prior
weights, aln_start/aln_len plumbed through columnar index for coverage
binning, and README damage classification benchmark section.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,7 @@ set(AGP_CORE_SOURCES
     src/em_reassign.cpp
     src/em_index.cpp
     src/columnar_index.cpp
+    src/coverage_em.cpp
 )
 
 # Subcommand sources
