Add CI/CD, fix conda recipe, bump to 1.0.0
- GitHub Actions CI: build + test on Linux and macOS on push/PR
- GitHub Actions release: build binaries and create release on v* tags;
  auto-computes SHA256 for conda recipe
- conda recipe: fix package name (dart-adna), update all URLs from agp
  to dart, remove run_exports (tool not a library), fix test commands
- CMakeLists.txt: fallback version bumped to 1.0.0
- .gitignore: scope workflows/ rule to repo root to not block .github/

--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,8 @@ include/agp/*_hexamer_manifest.json
 scripts/run_calibration_pipeline.slurm.sh
 
 # Workflows (keep in separate repos)
-workflows/
+/workflows/
+!/.github/
 
 # Notebooks (local analysis, too large/ephemeral for git)
 notebooks/
