Phase 4: CI tests for formal model theorems (T1-T5)
Add tests/test_formal_model.cpp with 5 tests:
- T1a: plain-EM ELBO monotonicity via inline e_step/m_step (MLE + MAP)
- T1b: SQUAREM ELBO monotonicity via progress callback on squarem_em
- T2: EM parameter recovery (unique, symmetric, skewed ambiguous mappings)
- T3: FDR control contract — returned threshold satisfies estimated FDR ≤ target
- T4: damage-aware EM pi direction test (all-ancient → pi > 0.5; all-modern → pi < 0.5)

Register as ctest target 'formal_model' linking DART_CORE_SOURCES.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -208,6 +208,20 @@ if(BUILD_TESTING)
         NAME damage_annotate_regressions
         COMMAND dart-damage-annotate-regressions $<TARGET_FILE:dart>
     )
+
+    add_executable(
+        dart-formal-model-tests
+        tests/test_formal_model.cpp
+        ${DART_CORE_SOURCES}
+    )
+    target_link_libraries(dart-formal-model-tests ${ZLIB_LIBRARIES} PkgConfig::ZSTD)
+    if(OpenMP_CXX_FOUND)
+        target_link_libraries(dart-formal-model-tests OpenMP::OpenMP_CXX)
+    endif()
+    add_test(
+        NAME formal_model
+        COMMAND dart-formal-model-tests
+    )
 endif()
 
 # Install
