Add AGD v4 format with environmental damage channels + damage-info command
- Extend AGD header to v4 with environmental damage fields:
  - Channel C (Oxidation): ox_rate_terminal/interior, uniformity, detected flag
  - Channel D (Depurination): purine_enrichment_5prime/3prime, detected flag

- Add `dart damage-info` command to display AGD file contents:
  - Human-readable output with all damage metrics
  - JSON output via --json flag
  - Reads environmental channels from v4 files (zeros for older versions)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ set(DART_SUBCOMMAND_SOURCES
     src/validate.cpp                  # cmd_validate
     src/cli/cmd_sample_damage.cpp     # cmd_sample_damage
     src/cli/cmd_damage_annotate.cpp   # cmd_damage_annotate
+    src/cli/cmd_damage_info.cpp       # cmd_damage_info
     src/cli/cmd_damage_profile.cpp    # cmd_damage_profile
     src/cli/cmd_hits2emi.cpp          # hits2emi (TSV to columnar)
 )
